# NoteTag

./: sea-script.txt
note_tag_project/: Cargo.toml
note_tag_project/src/: lib.rs  main.rs
note_tag_project/src/application/: mod.rs
note_tag_project/src/application/services/: init_services_setup.rs  mod.rs  user_service.rs
note_tag_project/src/application/usecase/: init_usecase_setup.rs  mod.rs  note_status.rs  note_usecase.rs  user_query_usecase.rs  user_tag_usecase.rs  user_usecase.rs
note_tag_project/src/configuration/: api_doc_config.rs  db_config.rs  mod.rs
note_tag_project/src/domain/: mod.rs
note_tag_project/src/domain/dto/: auth_dto.rs  mod.rs  note_dto.rs  query.rs  user_tag_dto.rs
note_tag_project/src/domain/entities/: account_status.rs  gender.rs  mod.rs  note.rs  note_hex_color.rs  note_status.rs  note_tag.rs  prelude.rs  role.rs  tag.rs  user.rs  user_tag.rs
note_tag_project/src/domain/repositories/: mod.rs  trait_association_helper.rs  trait_association_helper_fully.rs  trait_entity_helper.rs  trait_many_to_many_helper.rs  trait_note_hex_color_repository.rs  trait_note_repository.rs  trait_note_status.rs  trait_tag_repository.rs  trait_user_helper_repository.rs  trait_user_repository.rs  trait_user_x_tag_repository.rs
note_tag_project/src/domain/repositories/fully_implemented/: mod.rs  trait_association_helper_fully.rs  trait_entity_helper_fully.rs
note_tag_project/src/infrastructure/: mod.rs
note_tag_project/src/infrastructure/faring/: authentication.rs  cors.rs
note_tag_project/src/infrastructure/mysql/: mod.rs  mysql_connect.rs
(+39 files in other folders)
