[package]
name = "note_tag_project"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"]}
sea-orm = { version = "1.1.4", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }
sea-orm-migration = "1.1.4"
dotenv = "0.14.1"

utoipa = "5.3.1"
utoipa-swagger-ui = {version="*", features=["rocket"]}

serde = { version = "1.0.217", features = ["derive"] }